--- a/config .json.example
+++ b/config .json.example
@@ -1,6 +1,7 @@
 {
   "dumpBase": "/path/to/dumps/",
   "initialCutOff": "2016-08-18 11:21:27",
+  "jwtSecret": "supersecret",
   "db": {
     "connection": {
       "host": "127.0.0.1",
@@ -26,5 +27,10 @@
     "tag": "chulaimbo"
   }, {
     "tag": "victoria"
+  }],
+  "clients": [{
+    "id": 1,
+    "name": "ampath",
+    "password": "yourpass"
   }]
 }
