--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "array-unique": "^0.3.2",
     "async": "^2.0.1",
     "extfs": "0.0.7",
+    "find-remove": "^0.2.12",
     "hapi": "^14.2.0",
-    "hapi-auth-jwt2": "^7.0.1",
+    "hapi-auth-jwt2": "^7.1.0",
     "inert": "^4.0.1",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
     "lout": "^9.1.0",
     "moment": "^2.14.1",
@@ -28,5 +30,10 @@
     "string-to-stream": "^1.1.0",
     "tar.gz": "^1.0.5",
     "vision": "^4.1.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "mocha": "^3.0.2"
   }
 }
