--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "string-to-stream": "^1.1.0",
     "tar.gz": "^1.0.5",
     "vision": "^4.1.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "mocha": "^3.0.2"
   }
 }
