--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "extfs": "0.0.7",
     "find-remove": "^0.2.12",
     "hapi": "^14.2.0",
-    "hapi-auth-jwt2": "^7.0.1",
+    "hapi-auth-jwt2": "^7.1.0",
     "inert": "^4.0.1",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
     "lout": "^9.1.0",
     "moment": "^2.14.1",
