--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "array-unique": "^0.3.2",
     "async": "^2.0.1",
+    "cron": "^1.1.0",
     "extfs": "0.0.7",
     "find-remove": "^0.2.12",
     "hapi": "^14.2.0",
